; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_c-pretty-print.c_pp_c_additive_expression.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_c-pretty-print.c_pp_c_additive_expression.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @pp_c_additive_expression to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pp_c_additive_expression(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @TREE_CODE(i32 %6)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %30 [
    i32 128, label %9
    i32 129, label %9
  ]

9:                                                ; preds = %2, %2
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @TREE_OPERAND(i32 %11, i32 0)
  call void @pp_c_additive_expression(i32* %10, i32 %12)
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @pp_c_whitespace(i32* %13)
  %15 = load i32, i32* %5, align 4
  %16 = icmp eq i32 %15, 128
  br i1 %16, label %17, label %20

17:                                               ; preds = %9
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @pp_plus(i32* %18)
  br label %23

20:                                               ; preds = %9
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @pp_minus(i32* %21)
  br label %23

23:                                               ; preds = %20, %17
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @pp_c_whitespace(i32* %24)
  %26 = load i32*, i32** %3, align 8
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @TREE_OPERAND(i32 %27, i32 1)
  %29 = call i32 @pp_multiplicative_expression(i32* %26, i32 %28)
  br label %34

30:                                               ; preds = %2
  %31 = load i32*, i32** %3, align 8
  %32 = load i32, i32* %4, align 4
  %33 = call i32 @pp_multiplicative_expression(i32* %31, i32 %32)
  br label %34

34:                                               ; preds = %30, %23
  ret void
}

declare dso_local i32 @TREE_CODE(i32) #1

declare dso_local i32 @TREE_OPERAND(i32, i32) #1

declare dso_local i32 @pp_c_whitespace(i32*) #1

declare dso_local i32 @pp_plus(i32*) #1

declare dso_local i32 @pp_minus(i32*) #1

declare dso_local i32 @pp_multiplicative_expression(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
